<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>

    <string name="stock_info">Stock Information Today</string>
    <string name="title_widget_today">Stock Today</string>
    <string name="title_widget_detail">Stock Details</string>

    <string name="empty_stock">No stocks now, please add a new one.</string>
    <string name="empty_stock_list">No Stock Information Available</string>
    <string name="empty_stock_no_connection">No network now. Please connect to the internet. </string>
    <string name="title_activity_stock_detail">StockDetailActivity</string>

    <string name="key_statistics_title">Key Statistics</string>
    <string name="key_statistics_prev_close">Prev Close</string>
    <string name="key_statistics_open">Open</string>
    <string name="key_statistics_Low">Low</string>
    <string name="key_statistics_High">High</string>
    <string name="key_statistics_52wkLow">52wk Low</string>
    <string name="key_statistics_52wkHigh">52wk High</string>
    <string name="key_statistics_volume">Volume</string>
    <string name="key_statistics_Average_volume">Avg Vol</string>
    <string name="key_statistics_volume_stock"><xliff:g id="volume">%2$s</xliff:g>M</string>
    <string name="key_statistics_Average_volume_stock"><xliff:g id="volume">%2$s</xliff:g>M</string>

    <string name="info_today_close">Today\'s Close :</string>
    <string name="info_change"><xliff:g id="change">%1$s</xliff:g> ( <xliff:g id="change_percent">%2$s</xliff:g> )</string>
    <string name="info_title"><xliff:g id="name">%1$s</xliff:g> ( <xliff:g id="symbol">%2$s</xliff:g> )</string>
    <string name="info_delayed_quote">Delayed Quote NasdaqGS (USD)</string>

    <string name="tab1_14d">14 Days</string>
    <string name="tab2_1m">1 Month</string>
    <string name="tab3_2m">2M</string>

    <string name="add_quote">Add a new Stock quote</string>
</resources>
